新增系统解析